kubernetes-dashboard/ingress-kubernetes-dashboard.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
# name: kubernetes-dashboard
# namespace: kubernetes-dashboard
# annotations:
#   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#   kubernetes.io/ingress.class: "nginx"
#spec:
#  tls:
#    - hosts:
#        - k8s.int.kronshtadt.ru
#      secretName: k8s.int.kronshtadt.ru
#  rules:
#    - host: k8s.int.kronshtadt.ru
#      http:
#        paths:
#        - pathType: Prefix
#          path: /
#          backend:
#            service:
#              name: kubernetes-dashboard
#              port:
#                number: 443
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-test
  namespace: kubernetes-dashboard
spec:
  tls:
  - hosts:
      - k8s.int.kronshtadt.ru
    secretName: k8s.int.kronshtadt.ru
  rules:
  - host: k8s.int.kronshtadt.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
